test/parser/positive/NullLiteral.java
public class NullLiteral {
  public NullLiteral() {}
  protected NullLiteral x = null;
}
