test/parser/negative/UnicodeEscapes.java
public class UnicodeEscapes {
  public UnicodeEscapes() {}
  protected String x = "\u2297";
}
